added use cases and reconfigured referenced nuget packages

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,20 @@ DemoMicroservice/DemoService.Client.NetCore/obj/
 DemoMicroservice/DemoService.Client.NetCore/bin/
 DemoMicroservice/DemoService.IntegrationTests/bin/
 DemoMicroservice/DemoService.IntegrationTests/obj/
+2.0/DemoMicroservice/DemoService.Core/bin/
+2.0/DemoMicroservice/DemoService.Core/obj/
+2.0/DemoMicroservice/DemoService.Client.NetCore/obj/
+2.0/DemoMicroservice/DemoService.IntegrationTests/bin/
+2.0/DemoMicroservice/DemoService.IntegrationTests/obj/
+2.0/DemoMicroservice/.vs/DemoMicroservice/v15/
+2.0/DemoMicroservice/.vs/
+2.0/DemoMicroservice/bin/
+2.0/DemoMicroservice/DemoService.Client.NetCore/bin/
+2.0/DemoMicroservice/DemoService.Microservice/bin/
+2.0/DemoMicroservice/DemoService.Microservice/obj/
+2.0/DemoMicroservice/DemoService.SQL/bin/
+2.0/DemoMicroservice/DemoService.SQL/obj/
+2.0/DemoMicroservice/obj/
+2.0/UseCases/.vs/
+2.0/UseCases/UseCasesPlayground/bin/
+2.0/UseCases/UseCasesPlayground/obj/
