added authentication handler, authorizing token with Foundry Core Security microservice

--- a/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
+++ b/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
@@ -1,5 +1,6 @@
 {
 	"SQLConnection": "Server=localhost; Database=A1F Core 3.x; User Id=accellos; Password=accellos",
+	"CoreSecurityRootUri": "http://localhost:30100",
 	"Logging": {
 		"LogLevel": {
 			"Default": "Warning"
