--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -4,31 +4,99 @@ services:
   rabbitmq:
     image: rabbitmq:3.7.7-management-alpine
     environment:
+      # RabbitMQ user
       - RABBITMQ_DEFAULT_USER=<rabbitmq user>
+      # RabbitMQ password
       - RABBITMQ_DEFAULT_PASS=<rabbitmq password>
     ports:
       - "15672:15672"
 
-  foundry_core_security_microservice:
-    image: truecommerce/foundry.core.security.microservice:0.8
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.6.0
+    container_name: elasticsearch
+    environment:
+      - cluster.name=elasticsearch
+      - network.host=0.0.0.0
+      - bootstrap.memory_lock=true
+      - discovery.zen.minimum_master_nodes=1
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+
+  kibana:
+    depends_on:
+      - elasticsearch
+    image: docker.elastic.co/kibana/kibana:6.6.0
+    environment:
+      - server.host=0
+      - server.name=kibana
+      - elasticsearch.url=http://elasticsearch:9200
+      - xpack.monitoring.ui.container.elasticsearch.enabled=true
+    ports:
+      - 5601:5601
+
+  foundry.core.security.maintenance:
+    image: truecommerce/foundry.core.security.maintenance:0.9
     depends_on:
       - rabbitmq
+      - elasticsearch
+      - kibana
+    environment:
+      # Core Security Microservice SQL connection string
+      - Foundry__Security__SQLConnection=<Core DB connection string>
+      # indicates whether to run Expired Sessions Cleaner task
+      - Foundry__Security__ExpiredSessionsCleaner__Run=true
+      # Expired Sessions Cleaner cycle. It will sleep for Cycle - Actual Work Time but not less than 30 seconds between cycles
+      - Foundry__Security__ExpiredSessionsCleaner__Cycle=0.00:03:00
+      # User Session timeout
+      - Foundry__Security__ExpiredSessionsCleaner__UserSessionTimeout=0.00:05:00
+      # indicates whether to run Expired Certificates Cleaner task
+      - Foundry__Security__ExpiredCertificatesCleaner__Run=true
+      # Expired Certificates Cleaner cycle. It will sleep for Cycle - Actual Work Time but not less than 30 seconds between cycles
+      - Foundry__Security__ExpiredCertificatesCleaner__Cycle=1.00:00:00
+      # Timeout to delete expired certificates (expired certificate will be deleted after specified timespan)
+      - Foundry__Security__ExpiredCertificatesCleaner__ExpiredCertificateTimeout=10.00:00:00
+
+  foundry_core_security_microservice:
+    image: truecommerce/foundry.core.security.microservice:0.9
+    depends_on:
+      - rabbitmq
+      - elasticsearch
+      - kibana
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - SQLConnection=Server=<Core DB connection string>
-      - RABBITMQ_CONNECTION=rabbitmq
-      - RABBITMQ_USER=<rabbitmq user>
-      - RABBITMQ_PASS=<rabbitmq password>
-      - JwtSecret=<Jwt Secret>
-      - JwtDefaultExpireMinutes=30
-      - OverrideUserOnLogOn=true
-      - UserSessionTimeout=30
+      # Core Security Microservice SQL connection string
+      - Foundry__Security__SQLConnection=Server=<Core DB connection string>
+      # JWT secret
+      - Foundry__Security__JwtSecret=<Jwt Secret>
+      # JWT default expire time
+      - Foundry__Security__JwtDefaultExpireTime=0.00:30:00
+      # indicates whether to override user on logon
+      - Foundry__Security__OverrideUserOnLogOn=true
+      # user session timeout
+      - Foundry__Security__UserSessionTimeout=0.00:05:00
+      # RabbitMQ connection string
+      - RabbitMQ__Connection=rabbitmq
+      # RabbitMQ user
+      - RabbitMQ__User=<rabbitmq user>
+      # RabbitMQ password
+      - RabbitMQ__Password=<rabbitmq password>
+      #elasticsearch
+      - Logging__Elasticsearch__nodeUris=http://elasticsearch:9200
     ports:
       - "30100:80"
-    deploy:
-      replicas: 1
-      update_config:
-        parallelism: 1
-        delay: 10s
-      restart_policy:
-        condition: on-failure
+    healthcheck:
+      start_period: 30s
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      test: curl --fail -s http://localhost/healthcheck || exit 1
+
+volumes:
+  esdata:
