--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -66,6 +66,10 @@ services:
       - Foundry__Security__ExpiredCertificatesCleaner__Cycle=1.00:00:00
       # Timeout to delete expired certificates (expired certificate will be deleted after specified timespan)
       - Foundry__Security__ExpiredCertificatesCleaner__ExpiredCertificateTimeout=10.00:00:00
+      # indicates whether to run Expired ExternalReferences Cleaner task
+      - Foundry__Security__ExpiredExternalReferencesCleaner__Run=true
+      # Expired ExternalReferences Cleaner cycle. It will sleep for Cycle - Actual Work Time but not less than 30 seconds between cycles
+      - Foundry__Security__ExpiredExternalReferencesCleaner__Cycle=1.00:00:00
 
   foundry_core_security_microservice:
     depends_on:
