--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -21,6 +21,7 @@ services:
       - network.host=0.0.0.0
       - bootstrap.memory_lock=true
       - discovery.zen.minimum_master_nodes=1
+      - discovery.type=single-node
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       memlock:
