--- a/2.0/DemoMicroservice/DemoService.Core/DemoService.Core.csproj
+++ b/2.0/DemoMicroservice/DemoService.Core/DemoService.Core.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+	  <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundry.Core.Shared" Version="0.1.7-alpha" />
+    <PackageReference Include="Foundry.Core.Shared" Version="0.34.0-beta" />
   </ItemGroup>
 
 </Project>
