--- a/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
+++ b/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
@@ -1,10 +1,34 @@
 {
-	"SQLConnection": "Server=localhost; Database=A1F Core 3.x; User Id=accellos; Password=accellos",
-	"CoreSecurityRootUri": "http://localhost:30100",
-	"Logging": {
-		"LogLevel": {
-			"Default": "Warning"
+	"DemoMicroservice": {
+		"SqlConnection": "Server=localhost; Database=DemoMicroservice; User Id=accellos; Password=accellos"
+		//"CorsOriginAllowed" :  "; allowed separated CORS origins" 
+	},
+
+	"Foundry": {
+		"Security": {
+			"RootUrl": "http://localhost:30100"
 		}
 	},
-	"AllowedHosts": "*"
+
+	"Logging": {
+		"IncludeScopes": true,
+		"LogLevel": {
+			"Default": "Warning",
+			"System": "Warning",
+			"Microsoft": "None",
+			"Audit": "Information"
+		}
+	},
+
+	"HealthChecks-UI": {
+		"HealthChecks": [
+			{
+				"Name": "Foundry Core Security Microservice",
+				"Uri": "http://localhost:8192/healthcheck"
+			}
+		],
+		"Webhooks": [],
+		"EvaluationTimeOnSeconds": 10,
+		"MinimumSecondsBetweenFailureNotifications": 60
+	}
 }
