--- a/2.0/DemoMicroservice/DemoService.SQL/DemoService.SQL.csproj
+++ b/2.0/DemoMicroservice/DemoService.SQL/DemoService.SQL.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+	  <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundry.Core.Shared.SQL" Version="0.1.7-alpha" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+	  <PackageReference Include="AutoMapper" Version="9.0.0" />
+	  <PackageReference Include="Foundry.Core.Shared.SQL" Version="0.34.0-beta" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.6" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
   </ItemGroup>
 
   <ItemGroup>
