--- a/2.0/UseCases/UseCasesPlayground/UseCasesPlayground.csproj
+++ b/2.0/UseCases/UseCasesPlayground/UseCasesPlayground.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundry.Core.Security.Client.NetCore" Version="0.1.7-alpha" />
+    <PackageReference Include="Foundry.Core.Security.Client" Version="0.34.0-beta" />
   </ItemGroup>
 
   <ItemGroup>
