added elasticsearch/logstash logging sink support, added logging entities audit support

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ DemoMicroservice/DemoService.IntegrationTests/obj/
 2.0/UseCases/.vs/
 2.0/UseCases/UseCasesPlayground/bin/
 2.0/UseCases/UseCasesPlayground/obj/
+2.0/DemoMicroservice/DemoService.Client/obj/
