--- a/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
+++ b/2.0/DemoMicroservice/DemoService.Microservice/appsettings.json
@@ -10,6 +10,7 @@
 		}
 	},
 
+	// logging configuration
 	"Logging": {
 		"IncludeScopes": true,
 		"LogLevel": {
@@ -17,13 +18,35 @@
 			"System": "Warning",
 			"Microsoft": "None",
 			"Audit": "Information"
+		},
+
+		"Elasticsearch": {
+			"nodeUris": "http://localhost:9200",
+			"indexFormats": [
+				{
+					"contextPrefix": "",
+					"indexFormat": "demo-microservice-core-global-{0:yyyy.MM.dd}"
+				},
+				{
+					"contextPrefix": "Microsoft.AspNetCore",
+					"indexFormat": "demo-microservice-aspnet-global-{0:yyyy.MM.dd}"
+				},
+				{
+					"contextPrefix": "Microsoft.EntityFramework",
+					"indexFormat": "demo-microservice-ef-global-{0:yyyy.MM.dd}"
+				},
+				{
+					"contextPrefix": "Audit",
+					"indexFormat": "demo-microservice-audit-{1}-{0:yyyy.MM.dd}"
+				}
+			]
 		}
 	},
 
 	"HealthChecks-UI": {
 		"HealthChecks": [
 			{
-				"Name": "Foundry Core Security Microservice",
+				"Name": "Demo Microservice",
 				"Uri": "http://localhost:8192/healthcheck"
 			}
 		],
