--- a/2.0/DemoMicroservice/DemoService.Microservice/DemoService.Microservice.csproj
+++ b/2.0/DemoMicroservice/DemoService.Microservice/DemoService.Microservice.csproj
@@ -29,6 +29,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="2.2.0" />
 		<PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
+		<PackageReference Include="Serilog" Version="2.9.0" />
+		<PackageReference Include="Serilog.Exceptions" Version="5.3.1" />
+		<PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+		<PackageReference Include="Serilog.Sinks.ElasticSearch" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
