--- a/2.0/DemoMicroservice/DemoService.Microservice/appsettings.Development.json
+++ b/2.0/DemoMicroservice/DemoService.Microservice/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"Logging": {
+		"IncludeScopes": true,
+		"LogLevel": {
+			"Default": "Warning",
+			"System": "Warning",
+			"Microsoft": "Warning"
+		}
+	}
 }
