--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -103,7 +103,7 @@ services:
       - Logging__Elasticsearch__nodeUris=http://elasticsearch:9200
       #- ASPNETCORE_URLS=https://+;http://+
       #- ASPNETCORE_Kestrel__Certificates__Default__Password=<certificate password>
-      #- ASPNETCORE_Kestrel__Certificates__Default__Path=/https/<certificate name>
+      #- ASPNETCORE_Kestrel__Certificates__Default__Path=/https/<certificate file name>
     #volumes:
       #- <certificate folder path>:/https/
     ports:
