--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -51,7 +51,7 @@ services:
       - rabbitmq
       - elasticsearch
       - kibana
-    image: truecommerce/foundry.core.security.maintenance:0.60-rc5
+    image: truecommerce/foundry.core.security.maintenance:2.0.1
     restart: always
     environment:
       # Core Security Microservice SQL connection string
@@ -88,7 +88,7 @@ services:
       - rabbitmq
       - elasticsearch
       - kibana
-    image: truecommerce/foundry.core.security.microservice:0.60-rc5
+    image: truecommerce/foundry.core.security.microservice:2.0.1
     restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
