--- a/2.0/UseCases/UseCasesPlayground/UseCasesPlayground.csproj
+++ b/2.0/UseCases/UseCasesPlayground/UseCasesPlayground.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Foundry.Core.Security.Client" Version="0.34.0-beta" />
+    <PackageReference Include="Foundry.Core.Security.Client" Version="2.1.0-alpha-1" />
   </ItemGroup>
 
   <ItemGroup>
