--- a/2.0/runtime/foundry.core-compose.yml
+++ b/2.0/runtime/foundry.core-compose.yml
@@ -51,7 +51,7 @@ services:
       - rabbitmq
       - elasticsearch
       - kibana
-    image: truecommerce/foundry.core.security.maintenance:2.1.0.rc2
+    image: truecommerce/foundry.core.security.maintenance:2.1.0.rc3
     restart: always
     environment:
       # Core Security Microservice SQL connection string
@@ -86,7 +86,7 @@ services:
       - rabbitmq
       - elasticsearch
       - kibana
-    image: truecommerce/foundry.core.security.microservice:2.1.0.rc2_1
+    image: truecommerce/foundry.core.security.microservice:2.1.0.rc3
     restart: always
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
