converted text to md

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ DemoMicroservice/DemoService.IntegrationTests/obj/
 2.0/UseCases/UseCasesPlayground/bin/
 2.0/UseCases/UseCasesPlayground/obj/
 2.0/DemoMicroservice/DemoService.Client/obj/
+DemoMicroservice/DemoService.Client/obj/
