--- a/deployment/docker/foundry.core-compose.yml
+++ b/deployment/docker/foundry.core-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 
 services:
   rabbitmq:
@@ -46,7 +46,7 @@ services:
     ports:
       - 5601:5601
 
-  foundry.core.security.maintenance:
+  foundry_core_security_maintenance:
     depends_on:
       - rabbitmq
       - elasticsearch
@@ -116,7 +116,7 @@ services:
       #- ASPNETCORE_Kestrel__Certificates__Default__Password=<certificate password>
       #- ASPNETCORE_Kestrel__Certificates__Default__Path=/https/<certificate file name>
     #volumes:
-      #- <certificate folder path>:/https/
+    #- <certificate folder path>:/https/
     ports:
       - "30100:80"
     healthcheck:
